# kevin

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_add_year_month_to_assets_liabilities.py  0003_add_invite_token_to_household.py  0004_add_currency_to_household.py  0005_add_indexes_and_cascade.py  0006_float_to_decimal.py  0007_refresh_tokens.py
src/kevin/: database.py  exceptions.py  main.py  schemas.py  settings.py  utils.py
src/kevin/api/v1/: dependencies.py  router.py
src/kevin/api/v1/routers/: __init__.py  assets.py  auth.py  chat.py  expenses.py  export.py  households.py  income.py  liabilities.py  overview.py  tickers.py
src/kevin/api/v1/schemas/: __init__.py
src/kevin/api/v1/schemas/requests/: __init__.py  asset.py  auth.py  expense.py  household.py  income.py  liability.py
src/kevin/api/v1/schemas/responses/: __init__.py  asset.py  auth.py  expense.py  household.py  income.py  (+2 more)
src/kevin/models/: __init__.py  asset.py  expense.py  household.py  income.py  liability.py  refresh_token.py  user.py  user_household.py
src/kevin/repositories/: __init__.py  asset.py  base.py  expense.py  household.py  income.py  liability.py  refresh_token.py  user.py  user_household.py
src/kevin/services/: __init__.py  asset.py  auth.py  currency.py  expense.py  export.py  gemini.py  household.py  import_data.py  income.py  liability.py  overview.py
src/kevin/services/gemini/: __init__.py  exceptions.py  handlers.py  prompt.py  service.py  tools.py
