[project]
name = "kevin"
version = "0.1.0"
description = "Kevin REST API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlmodel>=0.0.21",
    "pydantic-settings>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=4.0",
    "email-validator>=2.0",
    "python-multipart>=0.0.28",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "google-genai>=1.0",
]

[project.scripts]
start = "kevin.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kevin"]
